<resources>
    <string name="app_name">Inventory App </string>
    <!-- Label for overflow menu option that inserts dummy data[CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for product information in the editor [CHAR LIMIT=30] -->
    <string name="category_product">Product Info</string>

    <!-- Label for Supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier Info</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Product Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">Product Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_quantity">Quantity</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Supplier Phone</string>

    <!-- Label for dropdown menu option if the supplier is Pearson [CHAR LIMIT=20] -->
    <string name="supplier_pearson">Pearson</string>

    <!-- Label for dropdown menu option if the supplier is Taylor and Brook [CHAR LIMIT=20] -->
    <string name="supplier_taylor_brook">Taylor and Brook</string>

    <!-- Label for dropdown menu option if the product is American Book Co.[CHAR LIMIT=20] -->
    <string name="supplier_american_book">American Book Co.</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Title text for the empty view, which describes the warehouse image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Warehouse is empty...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product
     to inventory[CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Quantity title for displaying quantity in list view [CHAR LIMIT=20] -->
    <string name="quantity_details_text">Quantity:\u0020</string>

    <!-- Phone title for display supplier phone in list view [CHAR LIMIT=20] -->
    <string name="phone_supplier_text">Phone:\u0020</string>

    <!-- Label for sale button[CHAR LIMIT=20] -->
    <string name="sale_text">Sale</string>

    <!-- Toast if quantity value is less than zero [CHAR LIMIT=20] -->
    <string name="toast_zero_greater">Quantity must be zero or greater</string>

    <!-- Text value 0 for quantity reset [CHAR LIMIT=20] -->
    <string name="quantity_zero_value">0</string>

    <!-- Hint text for call supplier [CHAR LIMIT=20] -->
    <string name="hint_call_supplier_text">Call Supplier</string>

    <!-- Toast for invalid number on call intent[CHAR LIMIT=20] -->
    <string name="toast_invalid_number_text">Sorry, invalid number</string>

    <!-- Sample product name for hard code testing [CHAR LIMIT=20] -->
    <string name="sample_product_name">3D Puzzle Art</string>

    <!-- Sample supplier phone for hard code testing[CHAR LIMIT=20] -->
    <string name="sample_supplier_phone">360-220-8090</string>

    <!--Sample supplier name display text [CHAR LIMIT=20] -->
    <string name="sample_supplier_name">Pearson Ltd</string>

    <!--In stock display text [CHAR LIMIT=20] -->
    <string name="in_stock_text">\u0020in stock</string>

    <!--Default quantity value for new products text [CHAR LIMIT=20] -->
    <string name="editor_quantity_default">1</string>

    <!--Toast for no empty fields [CHAR LIMIT=20] -->
    <string name="no_empty_values">Enter value for all fields</string>

    <!--Font family default value [CHAR LIMIT=20] -->
    <string name="default_font">sans-serif-light</string>

    <!--Font family medium value [CHAR LIMIT=20] -->
    <string name="default_font_medium">sans-serif-medium</string>

    <!--Toast for valid phone format input [CHAR LIMIT=20] -->
    <string name="toast_phone_format_invalid">Please format phone as:\n123-456-7891</string>

</resources>
