<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/large"
    tools:context=".EditorActivity">

    <!-- Product Info category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Product Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_product" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/small">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_price"
                android:inputType="number" />

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:inputType="number"
                android:text="@string/editor_quantity_default" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/medium">

                <!--Decrement button-->
                <Button
                    android:id="@+id/decrement_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/medium"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="sans-serif-medium"
                    android:hint="-"
                    android:onClick="decrement"
                    android:textColor="@color/editorColorPrimaryDark"
                    android:textSize="@dimen/large_text" />

                <!--Increment button-->
                <Button
                    android:id="@+id/increment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/medium"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="sans-serif-medium"
                    android:hint="+"
                    android:onClick="increment"
                    android:textColor="@color/editorColorPrimaryDark"
                    android:textSize="@dimen/large_text" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- Supplier Info category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Supplier Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/small">

            <!-- Supplier name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

            <!-- Supplier phone field -->
            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_phone"
                android:inputType="number" />

            <!--Call supplier button-->
            <Button
                android:id="@+id/call_button"
                android:layout_width="@dimen/button_call_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large"
                android:backgroundTint="@color/colorAlternate"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/hint_call_supplier_text"
                android:textColor="@color/editorColorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>